[HABRI][#354] Fixed button overlap

--- a/templates/habricentral/html/com_resources/create.css
+++ b/templates/habricentral/html/com_resources/create.css
@@ -301,3 +301,8 @@
 #steps li#trash.active:after {
 	display: none;
 }
+
+/* Authors */
+#new-authors-role {
+	width: 100%;
+}
